# tank_game

./: .gitignore  CMakeLists.txt  scene_manager.hpp
scripts/: generate_sprite_file.py
src/: base_scene.hpp  io.cpp  io.hpp  logging.hpp  main.cpp  persistent.hpp  sample_scene.cpp  sample_scene.hpp  scene.hpp  sprites.hpp  tile.hpp  util.cpp  util.hpp  world_scene.cpp  world_scene.hpp
